Add page content to template

--- a/src/index_template.html
+++ b/src/index_template.html
@@ -5,10 +5,36 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<h1>Test</h1>
-		<p>Esta es una página de prueba, se actualizará lo antes posible.</p>
+		<h1>Spain into the Fediverse</h1>
+		<p>Este es un listado de colectivos españoles que abandonan Twitter/X y entran al Fediverso.</p>
+		<h2>¡Aporta al listado!</h2>
+		<p>Este listado es de dominio público y colaborativo, puedes aportar a la lista en GitHub, o copiarla y expandirla por tu cuenta.</p>
+		<p>Actualmente está mantenida por <a href="https://antimundo.es/">Antimundo</a>, intentando mantener los siguientes criterios:</p>
+		<ul>
+			<li>Esta no es una lista de individuos, es una lista de colectivos, asociaciones, empresas, organismos públicos, universidades...</li>
+			<li>Esta lista solo recoge colectivos de España con sede en España.</li>
+			<li>Este listado será exigente:</li>
+			<ul style="list-style: circle; margin-left: 30px;">
+				<li>Todos los elementos de esta lista contarán con una fuente para verificar que esa cuenta en el Fediverso es oficial. <i>(No se aceptarán como referencia noticias que estén bajo un muro de pago, o enlaces al propio Twitter/X, debe ser una referencia que cualquiera pueda verificar).</i></li>
+				<li>No contará colectivos que estén en un estado dudoso, como por ejemplo El País, que tiene <a href="https://mastodon.social/@el_pais">una cuenta en Mastodon</a> pero ni han verificado su cuenta, ni hay mención a esta cuenta en su web, ni han hecho ningún comunicado oficial al respecto.</li>
+				<li>Para no inflar la lista demasiado, solo se admitirán cuentas que tengan al menos 100 seguidores, y las cuentas que lleven un año inactivas serán eliminadas.</li>
+			</ul>
+		</ul>
+
+		<blockquote>
+			<p>Nota: Este listado nace como un simple experimento informal, para intentar ver el impacto del Fediverso en España. Estoy abierto a sugerencias de cómo mejorar la lista, y a expandirla, pero prefiero que sea sencilla para que cualquiera pueda consultarla y aportar en ella.</p>
+		</blockquote>
+		<h2>La lista</h2>
+		<ul>
+			<li>✨ = Ha creado una cuenta en el Fediverso, y ha eliminado su cuenta de Twitter/X</li>
+			<li>⭐️ = Ha creado una cuenta en el Fediverso, y ha abandonado oficialmente su cuenta de Twitter/X</li>
+			<li>🔒 = Ha creado una cuenta en el Fediverso, pero sigue usando Twitter/X</li>
+		</ul>
 
 ${TABLE}
 
+		<a href="https://creativecommons.org/publicdomain/zero/1.0/deed">
+			<img src="https://upload.wikimedia.org/wikipedia/commons/4/43/CC_Zero_badge.svg" alt="Creative Commons 0" />
+		</a>
 	</body>
 </html>
