Round table borders+link to github

--- a/src/index_template.html
+++ b/src/index_template.html
@@ -8,13 +8,13 @@
 		<h1>Spain into the Fediverse</h1>
 		<p>Este es un listado de colectivos españoles que abandonan Twitter/X y entran al Fediverso.</p>
 		<h2>¡Aporta al listado!</h2>
-		<p>Este listado es de dominio público y colaborativo, puedes aportar a la lista en GitHub, o copiarla y expandirla por tu cuenta.</p>
+		<p>Este listado es de dominio público y colaborativo, puedes <a href="https://github.com/Nokorpo/spain-into-the-fediverse">aportar a la lista en GitHub</a>, o copiarla y expandirla por tu cuenta.</p>
 		<p>Actualmente está mantenida por <a href="https://antimundo.es/">Antimundo</a>, intentando mantener los siguientes criterios:</p>
 		<ul>
 			<li>Esta no es una lista de individuos, es una lista de colectivos, asociaciones, empresas, organismos públicos, universidades...</li>
 			<li>Esta lista solo recoge colectivos de España con sede en España.</li>
 			<li>Este listado será exigente:</li>
-			<ul style="list-style: circle; margin-left: 30px;">
+			<ul style="list-style: circle;">
 				<li>Todos los elementos de esta lista contarán con una fuente para verificar que esa cuenta en el Fediverso es oficial. <i>(No se aceptarán como referencia noticias que estén bajo un muro de pago, o enlaces al propio Twitter/X, debe ser una referencia que cualquiera pueda verificar).</i></li>
 				<li>No contará colectivos que estén en un estado dudoso, como por ejemplo El País, que tiene <a href="https://mastodon.social/@el_pais">una cuenta en Mastodon</a> pero ni han verificado su cuenta, ni hay mención a esta cuenta en su web, ni han hecho ningún comunicado oficial al respecto.</li>
 				<li>Para no inflar la lista demasiado, solo se admitirán cuentas que tengan al menos 100 seguidores, y las cuentas que lleven un año inactivas serán eliminadas.</li>
